Add Cloudflare Web Analytics

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -24,6 +24,8 @@
 
   <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}" />
   <meta name="robots" content="index, follow" />
+
+  <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "7250062292cd4ae38d38e3224d61802d"}'></script><!-- End Cloudflare Web Analytics -->
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to main content</a>
